--- a/frontEnd/src/index.css
+++ b/frontEnd/src/index.css
@@ -560,12 +560,13 @@ dd {
 .container, .small-container, .medium-container {
   max-width: 1200px;
   padding: 0 1rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .small-container {
-  max-width: 800px;
+  max-width: 500px;
+  display: flex;
 }
 
 .medium-container {
